--- a/720-TohGame/.project
+++ b/720-TohGame/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>720_TohGame</name>
+	<name>720-TohGame</name>
 	<comment></comment>
 	<projects>
 	</projects>
